--- a/pentiumtech.html
+++ b/pentiumtech.html
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 		</nav>
-		<div>
+		<div class="col-xs-5 col-xs-offset-2 col-md-4 col-md-offset-4">
 			<h2>Technology Solutions</h2>
 			<h2>To propel your business</h2>
 		</div>
